--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   },
   "homepage": "https://github.com/priyanka1719/ShoppingCartApp#readme",
   "dependencies": {
-    "body-parser": "~1.17.2",
+    "body-parser": "^1.18.3",
     "cors": "~2.8.3",
-    "express": "~4.15.3",
+    "express": "^4.16.3",
     "mongoose": "~4.11.0"
   },
   "devDependencies": {
